--- a/bin/application/dentaku_gamen.fxml
+++ b/bin/application/dentaku_gamen.fxml
@@ -52,43 +52,43 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="419.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="375.0" prefWidth="601.0" VBox.vgrow="ALWAYS">
       <children>
         <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
           <font>
             <Font size="18.0" />
           </font>
         </Label>
-            <Button fx:id="button_tasu" layoutX="301.0" layoutY="203.0" mnemonicParsing="false" onAction="#handleOneButtonActiontasu" prefHeight="109.0" prefWidth="82.0" text="+" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="301.0" AnchorPane.rightAnchor="257.0" AnchorPane.topAnchor="203.0">
+            <Button fx:id="button_tasu" layoutX="333.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOneButtonActiontasu" prefHeight="109.0" prefWidth="93.0" text="+" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="333.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="202.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="button_kakeru" layoutX="300.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonActionkakeru" prefHeight="53.0" prefWidth="82.0" text="×" />
-            <Button fx:id="button_waru" layoutX="398.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonActionwaru" prefHeight="53.0" prefWidth="82.0" text="÷" />
-            <Button fx:id="button_hiku" layoutX="398.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleOneButtonActionhiku" prefHeight="53.0" prefWidth="82.0" text="-" AnchorPane.bottomAnchor="118.0" AnchorPane.leftAnchor="398.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="204.0" />
-            <Button fx:id="button_wa" layoutX="398.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonActionwa" prefHeight="53.0" prefWidth="82.0" text="=" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="398.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="259.0" />
-            <Button id="button" layoutX="14.0" layoutY="255.0" mnemonicParsing="false" onAction="#handleOneButtonAction0" prefHeight="53.0" prefWidth="82.0" text="0" AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="544.0" AnchorPane.topAnchor="255.0" />
-            <Button layoutX="109.0" layoutY="255.0" mnemonicParsing="false" onAction="#handleOneButtonAction00" prefHeight="53.0" prefWidth="82.0" text="00" AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="109.0" AnchorPane.rightAnchor="449.0" AnchorPane.topAnchor="255.0" />
-            <Button layoutX="206.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonActionsyousuuten" prefHeight="53.0" prefWidth="82.0" text="・" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="206.0" AnchorPane.rightAnchor="352.0" AnchorPane.topAnchor="259.0" />
-            <Button id="button" fx:id="button_4" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleOneButtonAction4" prefHeight="53.0" prefWidth="82.0" text="4" AnchorPane.bottomAnchor="179.99999999999997" AnchorPane.leftAnchor="14.0" />
-            <Button fx:id="button_2" layoutX="110.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleOneButtonAction2" prefHeight="53.0" prefWidth="82.0" text="2" AnchorPane.bottomAnchor="124.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="448.0" AnchorPane.topAnchor="198.0" />
-            <Button fx:id="button_3" layoutX="206.0" layoutY="201.0" mnemonicParsing="false" onAction="#handleOneButtonAction3" prefHeight="53.0" prefWidth="82.0" text="3" AnchorPane.leftAnchor="206.0" AnchorPane.topAnchor="201.0" />
-            <Button fx:id="button_8" layoutX="110.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonAction8" prefHeight="53.0" prefWidth="82.0" text="8" />
-            <Button id="button" fx:id="button_7" layoutX="14.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonAction7" prefHeight="53.0" prefWidth="82.0" text="7" />
-            <Button fx:id="button_9" layoutX="205.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonAction9" prefHeight="53.0" prefWidth="82.0" text="9" />
-            <Button id="button" fx:id="button_1" layoutX="14.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleOneButtonAction1" prefHeight="53.0" prefWidth="82.0" text="1" AnchorPane.bottomAnchor="124.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="544.0" AnchorPane.topAnchor="198.0" />
-            <Button fx:id="button_5" layoutX="110.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleOneButtonAction5" prefHeight="53.0" prefWidth="82.0" text="5" />
-            <Button fx:id="button_6" layoutX="205.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonAction6" prefHeight="53.0" prefWidth="82.0" text="6" />
-            <TextField fx:id="displayField" layoutX="12.0" layoutY="11.0" prefHeight="68.0" prefWidth="575.0" />
-            <TextField fx:id="symbolField" layoutX="14.0" layoutY="11.0" prefHeight="19.0" prefWidth="25.0" />
-            <Button id="button" fx:id="button_clear" layoutX="13.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleOneButtonActionclear" prefHeight="53.0" prefWidth="575.0" text="AC" />
-            <Button fx:id="button_puramai" layoutX="489.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleOneButtonActionpuramai" prefHeight="53.0" prefWidth="82.0" text="+/-" />
-            <Button fx:id="button_zeikomi" layoutX="300.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonActionzeikomi" prefHeight="53.0" prefWidth="82.0" text="税込" />
-            <Button fx:id="button_zeinuki" layoutX="398.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonActionzeinuki" prefHeight="53.0" prefWidth="82.0" text="税抜" />
-            <Button fx:id="button_delite" layoutX="489.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonActiondelite" prefHeight="53.0" prefWidth="82.0" text="→" />
-            <Button fx:id="button_ruto" layoutX="489.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonActionruto" prefHeight="53.0" prefWidth="82.0" text="√" />
-            <Button fx:id="button_CE" layoutX="489.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonActionCE" prefHeight="53.0" prefWidth="82.0" text="CE" />
+            <Button fx:id="button_kakeru" layoutX="332.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonActionkakeru" prefHeight="53.0" prefWidth="93.0" text="×" />
+            <Button fx:id="button_waru" layoutX="434.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonActionwaru" prefHeight="53.0" prefWidth="93.0" text="÷" />
+            <Button fx:id="button_hiku" layoutX="435.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOneButtonActionhiku" prefHeight="53.0" prefWidth="93.0" text="-" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="435.0" AnchorPane.rightAnchor="112.0" AnchorPane.topAnchor="202.0" />
+            <Button fx:id="button_wa" layoutX="434.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonActionwa" prefHeight="53.0" prefWidth="93.0" text="=" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="434.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="259.0" />
+            <Button id="button" layoutX="27.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonAction0" prefHeight="53.0" prefWidth="93.0" text="0" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="520.0" AnchorPane.topAnchor="259.0" />
+            <Button layoutX="125.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonAction00" prefHeight="53.0" prefWidth="93.0" text="00" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="422.0" AnchorPane.topAnchor="259.0" />
+            <Button layoutX="227.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonActionsyousuuten" prefHeight="53.0" prefWidth="93.0" text="・" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="320.0" AnchorPane.topAnchor="259.0" />
+            <Button id="button" fx:id="button_4" layoutX="27.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonAction4" prefHeight="53.0" prefWidth="93.0" text="4" AnchorPane.bottomAnchor="178.0" AnchorPane.leftAnchor="27.0" />
+            <Button fx:id="button_2" layoutX="125.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOneButtonAction2" prefHeight="53.0" prefWidth="93.0" text="2" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="422.0" AnchorPane.topAnchor="202.0" />
+            <Button fx:id="button_3" layoutX="227.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOneButtonAction3" prefHeight="53.0" prefWidth="93.0" text="3" AnchorPane.leftAnchor="227.0" AnchorPane.topAnchor="202.0" />
+            <Button fx:id="button_8" layoutX="127.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonAction8" prefHeight="53.0" prefWidth="93.0" text="8" />
+            <Button id="button" fx:id="button_7" layoutX="27.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonAction7" prefHeight="53.0" prefWidth="93.0" text="7" />
+            <Button fx:id="button_9" layoutX="227.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonAction9" prefHeight="53.0" prefWidth="93.0" text="9" />
+            <Button id="button" fx:id="button_1" layoutX="27.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOneButtonAction1" prefHeight="53.0" prefWidth="93.0" text="1" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="520.0" AnchorPane.topAnchor="202.0" />
+            <Button fx:id="button_5" layoutX="127.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonAction5" prefHeight="53.0" prefWidth="93.0" text="5" />
+            <Button fx:id="button_6" layoutX="228.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonAction6" prefHeight="53.0" prefWidth="93.0" text="6" />
+            <TextField fx:id="displayField" layoutX="13.0" layoutY="7.0" prefHeight="75.0" prefWidth="616.0" />
+            <TextField fx:id="symbolField" layoutX="14.0" layoutY="7.0" prefHeight="19.0" prefWidth="25.0" />
+            <Button id="button" fx:id="button_clear" layoutX="28.0" layoutY="315.0" mnemonicParsing="false" onAction="#handleOneButtonActionclear" prefHeight="53.0" prefWidth="597.0" text="AC" />
+            <Button fx:id="button_puramai" layoutX="530.0" layoutY="201.0" mnemonicParsing="false" onAction="#handleOneButtonActionpuramai" prefHeight="53.0" prefWidth="93.0" text="+/-" />
+            <Button fx:id="button_zeikomi" layoutX="332.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonActionzeikomi" prefHeight="53.0" prefWidth="93.0" text="税込" />
+            <Button fx:id="button_zeinuki" layoutX="434.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonActionzeinuki" prefHeight="53.0" prefWidth="93.0" text="税抜" />
+            <Button fx:id="button_delite" layoutX="530.0" layoutY="144.0" mnemonicParsing="false" onAction="#handleOneButtonActiondelite" prefHeight="53.0" prefWidth="93.0" text="→" />
+            <Button fx:id="button_ruto" layoutX="530.0" layoutY="85.0" mnemonicParsing="false" onAction="#handleOneButtonActionruto" prefHeight="53.0" prefWidth="93.0" text="√" />
+            <Button fx:id="button_CE" layoutX="530.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleOneButtonActionCE" prefHeight="53.0" prefWidth="93.0" text="CE" />
       </children>
     </AnchorPane>
   </children>
